CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/Touch_Points__c.object-meta.xml
<CustomObject>
    <description>For interactions w/ Donors/Organizations</description>
    <label>Touch Point</label>
    <nameField>
        <displayFormat>T{0}</displayFormat>
        <label>Touch Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Touch Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>