CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Touch Points</relationshipLabel>
    <relationshipName>Touch_Points</relationshipName>
    <type>Lookup</type>
</CustomField>