CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/First_Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Touch Point</label>
    <type>Checkbox</type>
</CustomField>