CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Touch Points</relationshipLabel>
    <relationshipName>Touch_Points</relationshipName>
    <type>Lookup</type>
</CustomField>