CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/Touch_Point_Date__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point_Date__c</fullName>
    <label>Touch Point Date</label>
    <type>Date</type>
</CustomField>