CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/Touch_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point_Type__c</fullName>
    <label>Touch Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mailing</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Met in Person</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Sent Gift</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>