CoCRM/myproject/force-app/main/default/objects/Touch_Points__c/fields/Touch_Point_With__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point_With__c</fullName>
    <label>Touch Point With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rabbi</fullName>
            </value>
            <value>
                <fullName>Rebbetzin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>